@@ -12,6 +12,7 @@ Changes in version 3.2 M1
 * fix concurrency issue in AnnotationMethodHandlerExceptionResolver
 * fix case-sensitivity issue with some containers on access to 'Content-Disposition' header
 * add Servlet 3.0 based async support
+* fix issue with encoded params in UriComponentsBuilder
 
 Changes in version 3.1.1 (2012-02-16)
 -------------------------------------
